[tool.poetry]
name = "graphiti-core"
version = "0.11.6pre9"
description = "A temporal graph building library"
authors = [
    "Paul Paliychuk <paul@getzep.com>",
    "Preston Rasmussen <preston@getzep.com>",
    "Daniel Chalef <daniel@getzep.com>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "graphiti_core", from = "." }]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pydantic = ">=2.8.2"
neo4j = ">=5.23.0"
diskcache = ">=5.6.3"
openai = ">=1.53.0"
tenacity = ">=9.0.0"
numpy = ">=1.0.0"
python-dotenv = ">=1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
groq = ">=0.2.0"
anthropic = ">=0.49.0"
google-generativeai = ">=1.8.0"
ipykernel = ">=6.29.5"
jupyterlab = ">=4.2.4"
diskcache-stubs = ">=5.6.3.6.20240818"
langgraph = ">=0.2.15"
langchain-anthropic = ">=0.2.4"
langsmith = ">=0.1.108"
langchain-openai = ">=0.2.6"
sentence-transformers = ">=3.2.1"
transformers = ">=4.45.2"
voyageai = ">=0.2.3"
pytest = ">=8.3.3"
pytest-asyncio = ">=0.24.0"
pytest-xdist = ">=3.6.1"
ruff = ">=0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
